--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -497,5 +497,12 @@
   "renameNFiles": "{{count}}個のファイルの名前を変更",
   "testRename": "テスト名前変更（変更なし）",
   "noFilesToRename": "名前変更するファイルがありません",
-  "renamePackedFiles": "パックファイルの名前変更"
+  "renamePackedFiles": "パックファイルの名前変更",
+  "setFolderPathsManuallyShogun2": "Mod マネージャーは Windows レジストリから Shogun 2 のフォルダ位置を取得しようとしましたが、見つかりませんでした！手動で設定する必要があります！",
+  "setFolderPathsManuallyOptionallyShogun2": "Mod マネージャーは Windows レジストリから Shogun 2 のフォルダパスを自動的に見つけましたが、ここで手動で設定することもできます。",
+  "shogun2": "Shogun 2",
+  "mainShogun2Folder": "Three_Kingdoms.exe を含む Shogun 2 のメインフォルダ。例: C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
+  "shogun2Folder": "Shogun 2 フォルダ:",
+  "selectShogun2Folder": "Shogun 2 フォルダを選択",
+  "shogun2ContentFolder": "Shogun 2 の Steam ワークショップ コンテンツフォルダ 201270 (Shogun 2 の Steam ID) に含まれる Mod。例: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270"
 }
