copy mod to data option for mods in content

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -504,5 +504,6 @@
   "renameNFiles": "Rename {{count}} Files",
   "testRename": "Test Rename (No Changes)",
   "noFilesToRename": "No Files to Rename",
-  "renamePackedFiles": "Rename Packed Files"
+  "renamePackedFiles": "Rename Packed Files",
+  "copyModToData": "Copy mod to data"
 }
