--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -504,5 +504,6 @@
   "mainShogun2Folder": "Three_Kingdoms.exe を含む Shogun 2 のメインフォルダ。例: C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
   "shogun2Folder": "Shogun 2 フォルダ:",
   "selectShogun2Folder": "Shogun 2 フォルダを選択",
-  "shogun2ContentFolder": "Shogun 2 の Steam ワークショップ コンテンツフォルダ 201270 (Shogun 2 の Steam ID) に含まれる Mod。例: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270"
+  "shogun2ContentFolder": "Shogun 2 の Steam ワークショップ コンテンツフォルダ 201270 (Shogun 2 の Steam ID) に含まれる Mod。例: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270",
+  "copyModToData": "Mod を data フォルダにコピー"
 }
