--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -504,5 +504,6 @@
   "mainShogun2Folder": "Three_Kingdoms.exe가 포함된 Shogun 2 메인 폴더, 예: C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
   "shogun2Folder": "Shogun 2 폴더:",
   "selectShogun2Folder": "Shogun 2 폴더 선택",
-  "shogun2ContentFolder": "Shogun 2의 Steam 워크숍 콘텐츠 폴더 201270 (Shogun 2의 Steam ID)로, 모드가 포함되어 있습니다. 예: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270"
+  "shogun2ContentFolder": "Shogun 2의 Steam 워크숍 콘텐츠 폴더 201270 (Shogun 2의 Steam ID)로, 모드가 포함되어 있습니다. 예: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270",
+  "copyModToData": "모드를 data 폴더에 복사"
 }
