--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -504,5 +504,6 @@
   "mainShogun2Folder": "La carpeta principal de Shogun 2 que contiene Three_Kingdoms.exe, por ejemplo C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
   "shogun2Folder": "Carpeta de Shogun 2:",
   "selectShogun2Folder": "Seleccionar carpeta de Shogun 2",
-  "shogun2ContentFolder": "La carpeta de contenido de Steam Workshop de Shogun 2 llamada 201270 (que es la ID de Steam de Shogun 2) que contiene mods, por ejemplo C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270"
+  "shogun2ContentFolder": "La carpeta de contenido de Steam Workshop de Shogun 2 llamada 201270 (que es la ID de Steam de Shogun 2) que contiene mods, por ejemplo C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270",
+  "copyModToData": "Copiar mod a data"
 }
