--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -504,5 +504,6 @@
   "mainShogun2Folder": "Основная папка Shogun 2, содержащая Three_Kingdoms.exe, например C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War Rome II",
   "shogun2Folder": "Папка Shogun 2:",
   "selectShogun2Folder": "Выбрать папку Shogun 2",
-  "shogun2ContentFolder": "Папка Steam Workshop Shogun 2 с названием 214950 (Steam ID игры Shogun 2), содержащая моды, например C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\214950"
+  "shogun2ContentFolder": "Папка Steam Workshop Shogun 2 с названием 214950 (Steam ID игры Shogun 2), содержащая моды, например C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\214950",
+  "copyModToData": "Скопировать мод в папку data"
 }
