--- a/locales/tr/translation.json
+++ b/locales/tr/translation.json
@@ -504,5 +504,6 @@
   "mainShogun2Folder": "Three_Kingdoms.exe dosyasını içeren ana Shogun 2 klasörü, örneğin C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
   "shogun2Folder": "Shogun 2 klasörü:",
   "selectShogun2Folder": "Shogun 2 Klasörünü Seç",
-  "shogun2ContentFolder": "Shogun 2 Steam Workshop içerik klasörü 201270 (Shogun 2'nin Steam ID’si) adlı, modları içeren klasör, örneğin C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270"
+  "shogun2ContentFolder": "Shogun 2 Steam Workshop içerik klasörü 201270 (Shogun 2'nin Steam ID’si) adlı, modları içeren klasör, örneğin C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270",
+  "copyModToData": "Modu data klasörüne kopyala"
 }
