--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -501,7 +501,7 @@
   "setFolderPathsManuallyShogun2": "Mod マネージャーは Windows レジストリから Shogun 2 のフォルダ位置を取得しようとしましたが、見つかりませんでした！手動で設定する必要があります！",
   "setFolderPathsManuallyOptionallyShogun2": "Mod マネージャーは Windows レジストリから Shogun 2 のフォルダパスを自動的に見つけましたが、ここで手動で設定することもできます。",
   "shogun2": "Shogun 2",
-  "mainShogun2Folder": "Three_Kingdoms.exe を含む Shogun 2 のメインフォルダ。例: C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
+  "mainShogun2Folder": "shogun2.exe を含む Shogun 2 のメインフォルダ。例: C:\\Program Files (x86)\\Steam\\steamapps\\common\\Total War SHOGUN 2",
   "shogun2Folder": "Shogun 2 フォルダ:",
   "selectShogun2Folder": "Shogun 2 フォルダを選択",
   "shogun2ContentFolder": "Shogun 2 の Steam ワークショップ コンテンツフォルダ 201270 (Shogun 2 の Steam ID) に含まれる Mod。例: C:\\Program Files (x86)\\Steam\\steamapps\\workshop\\content\\201270",
