--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -203,6 +203,7 @@
   "copyModList": "Copy Mod List",
   "createSteamCollectionMsg": "Create a Steam collection from enabled mods:",
   "forModders": "For Modders",
+  "featuresForModders": "Features For Modders",
   "keepInSync": "Keep these in sync for MP!",
   "forCustomBattleTesting": "For 1v1 testing in custom battles.",
   "makeCustomBattleGenerals": "Make all units custom battle generals",
