skill tree editing wip

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -467,7 +467,6 @@
   "errorScreenshotInstructions": "You can find and report the error logged inside %appdata%/wh3mm/logs/main.log",
   "removeBadge": "Remove badge",
   "noMatches": "NO MATCHES",
-  "allMods": "All mods",
   "colorBlue": "Blue",
   "colorEmerald": "Emerald",
   "colorRed": "Red",
@@ -506,5 +505,21 @@
   "testRename": "Test Rename (No Changes)",
   "noFilesToRename": "No Files to Rename",
   "renamePackedFiles": "Rename Packed Files",
-  "copyModToData": "Copy mod to data"
+  "copyModToData": "Copy mod to data",
+  "addNode": "Add Node",
+  "customSkill": "Custom Skill",
+  "existingSkill": "Existing Skill",
+  "selectSkill": "Select Skill",
+  "searchSkills": "Search skills...",
+  "effects": "Effects",
+  "enterSkillName": "Enter skill name",
+  "description": "Description",
+  "enterDescription": "Enter description",
+  "icon": "Icon",
+  "selectIcon": "Select icon...",
+  "row": "Row",
+  "maxLevel": "Max Level",
+  "unlockRank": "Unlock Rank",
+  "searchEffects": "Search effects...",
+  "editNode": "Edit Node"
 }
