--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -522,5 +522,6 @@
   "unlockRank": "Unlock Rank",
   "searchEffects": "Search effects...",
   "editNode": "Edit Node",
-  "saveOnlyChanges": "Save Only Changes"
+  "saveOnlyChanges": "Save Only Changes",
+  "JSON": "JSON"
 }
