we can now edit effects for each level of a skill

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -523,5 +523,6 @@
   "searchEffects": "Search effects...",
   "editNode": "Edit Node",
   "saveOnlyChanges": "Save Only Changes",
-  "JSON": "JSON"
+  "JSON": "JSON",
+  "level": "Level"
 }
